mostrar los 10 elementos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>Lista Tareas</title>
 </head>
 <body>
+<h1>Lista de tareas</h1>
+<p></p>
+<div id="mostrar-10"></div>
+
 	<script src="assets/js/main.js"></script>
+	
 </body>
 </html>
